feature: 一些新功能和彩蛋  - ailas命令的用户界面  - 脚本执行器中几个神秘的类 fix: 一堆问题  - 修复了SystemAnalysisActivity忘记i18n的问题  - 修复了Cythava++（bushi）的大括号数组字面量解析失败的问题  - 修复了电脑端解释器有的时候for循环错误显示不正常和异常报错的问题